--- a/robot_arm/package.xml
+++ b/robot_arm/package.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>RCA</name>
+  <name>robot_arm</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="messerschmidt.markus@web.de">ros2</maintainer>
+  <maintainer email="rosmobile@todo.todo">rosmobile</maintainer>
   <license>TODO: License declaration</license>
-
-  <depend>rclpy</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
